--- a/0.SqrEquation/doc/latex/_quad_equation_solution-example.tex
+++ b/0.SqrEquation/doc/latex/_quad_equation_solution-example.tex
@@ -1,10 +1,7 @@
 \hypertarget{_quad_equation_solution-example}{}\doxysection{Quad\+Equation\+Solution}
-Функция решения квадратного уравнения. \begin{DoxyAuthor}{Author}
-Ivan Pavlov 
-\end{DoxyAuthor}
-\begin{DoxyDate}{Date}
-26.\+08.\+2021 The function creates variables and a structure in which the coefficients of the equation, the solution and the state of the roots are written, respectively. ()
-\end{DoxyDate}
+struct Function of Quadratic Equation coefficients. The function creates variables and a structure in which the coefficients of the equation, the solution and the state of the roots are written, respectively. \begin{DoxyReturn}{Returns}
+struct with Quadratic or Linear Equation coefficients ()
+\end{DoxyReturn}
 
 \begin{DoxyCodeInclude}{0}
 
