--- a/0.SqrEquation/doc/latex/clear_buffer-example.tex
+++ b/0.SqrEquation/doc/latex/clear_buffer-example.tex
@@ -1,10 +1,7 @@
 \hypertarget{clear_buffer-example}{}\doxysection{clear\+Buffer}
-Функция решения квадратного уравнения. \begin{DoxyAuthor}{Author}
-Ivan Pavlov 
-\end{DoxyAuthor}
-\begin{DoxyDate}{Date}
-26.\+08.\+2021 Function that clears the scanf() buffer. ()
-\end{DoxyDate}
+Функция решения квадратного уравнения. Function that clears the scanf() buffer. \begin{DoxyReturn}{Returns}
+void ()
+\end{DoxyReturn}
 
 \begin{DoxyCodeInclude}{0}
 
