--- a/0.SqrEquation/doc/latex/compare_double-example.tex
+++ b/0.SqrEquation/doc/latex/compare_double-example.tex
@@ -1,14 +1,7 @@
 \hypertarget{compare_double-example}{}\doxysection{compare\+Double}
-Функция сравнения. \begin{DoxyAuthor}{Author}
-Ivan Pavlov 
-\end{DoxyAuthor}
-\begin{DoxyDate}{Date}
-26.\+08.\+2021 
-\end{DoxyDate}
-\begin{DoxyRefDesc}{Todo}
-\item[\mbox{\hyperlink{todo__todo000001}{Todo}}]Comparison of numbers of the double type. Returns the enum value from DOUBLE\+\_\+\+COMPARE\+\_\+\+STATUS. (3.\+4, 4.\+1) \end{DoxyRefDesc}
-
-
+Double compare function. Comparison of numbers of the double type. \begin{DoxyReturn}{Returns}
+the enum value from DOUBLE\+\_\+\+COMPARE\+\_\+\+STATUS. (3.\+4, 4.\+1)
+\end{DoxyReturn}
 
 \begin{DoxyCodeInclude}{0}
 
