--- a/0.SqrEquation/doc/latex/refman.tex
+++ b/0.SqrEquation/doc/latex/refman.tex
@@ -180,10 +180,6 @@
 \chapter{Class Documentation}
 \input{struct_quadratic_equation_solution_status}
 \chapter{File Documentation}
-\input{cmake-build-debug_2_c_make_files_23_820_82_2_compiler_id_c_2_c_make_c_compiler_id_8c}
-\input{cmake-build-minsizerel_2_c_make_files_23_820_82_2_compiler_id_c_2_c_make_c_compiler_id_8c}
-\input{cmake-build-release_2_c_make_files_23_820_82_2_compiler_id_c_2_c_make_c_compiler_id_8c}
-\input{cmake-build-relwithdebinfo_2_c_make_files_23_820_82_2_compiler_id_c_2_c_make_c_compiler_id_8c}
 \input{_equation_8c}
 \input{_equation_8h}
 \input{_equation_8h_source}
@@ -193,9 +189,12 @@
 \input{solve_quad_case-example}
 \input{clear_buffer-example}
 \input{solve_linear_case-example}
+\input{get_coefficients-example}
 \input{_quad_equation_solution-example}
-\input{unit_test-example}
-\input{command_line_interface-example}
+\input{file_test_output-example}
+\input{console_test_output-example}
+\input{uni_test-example}
+\input{solve_quad_equation-example}
 %--- End generated contents ---
 % Index
   \backmatter
