--- a/0.SqrEquation/doc/latex/solve_quad_case-example.tex
+++ b/0.SqrEquation/doc/latex/solve_quad_case-example.tex
@@ -1,10 +1,7 @@
 \hypertarget{solve_quad_case-example}{}\doxysection{solve\+Quad\+Case}
-Функция решения квадратного уравнения. \begin{DoxyAuthor}{Author}
-Ivan Pavlov 
-\end{DoxyAuthor}
-\begin{DoxyDate}{Date}
-26.\+08.\+2021 A function that records the solutions of equations and the state of the roots in the \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} structure. Returns a structure containing the solution and their states. (3.\+4, 4.\+1, 5.\+8)
-\end{DoxyDate}
+A Quadratic case function. A function that records the solutions of equations and the state of the roots the \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} structure in the linear case. \begin{DoxyReturn}{Returns}
+struct with Quadratic Equation statement and parts of values. (3.\+4, 4.\+1, 5.\+8)
+\end{DoxyReturn}
 
 \begin{DoxyCodeInclude}{0}
 
