--- a/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
+++ b/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
@@ -7,20 +7,20 @@
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-double \mbox{\hyperlink{struct_quadratic_equation_solution_status_a2b9fad4e5c974295c92f5e9ec9b5b173}{b\+Part}}
+double \mbox{\hyperlink{struct_quadratic_equation_solution_status_a2ce59778efaaec661264daf82e1486a1}{b\+Coefficient\+Part}}
 \item 
-double \mbox{\hyperlink{struct_quadratic_equation_solution_status_a7822b1699e81effd38073493baa0267d}{d\+Part}}
+double \mbox{\hyperlink{struct_quadratic_equation_solution_status_a5f97f17910df23ec7e92a4adf3bc91a2}{discriminant\+Part}}
 \item 
 int \mbox{\hyperlink{struct_quadratic_equation_solution_status_a7ae0ba088695a0270f5f1e68e4840200}{condition}}
 \end{DoxyCompactItemize}
 
 
 \doxysubsection{Member Data Documentation}
-\mbox{\Hypertarget{struct_quadratic_equation_solution_status_a2b9fad4e5c974295c92f5e9ec9b5b173}\label{struct_quadratic_equation_solution_status_a2b9fad4e5c974295c92f5e9ec9b5b173}} 
-\index{QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}!bPart@{bPart}}
-\index{bPart@{bPart}!QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}}
-\doxysubsubsection{\texorpdfstring{bPart}{bPart}}
-{\footnotesize\ttfamily double Quadratic\+Equation\+Solution\+Status\+::b\+Part}
+\mbox{\Hypertarget{struct_quadratic_equation_solution_status_a2ce59778efaaec661264daf82e1486a1}\label{struct_quadratic_equation_solution_status_a2ce59778efaaec661264daf82e1486a1}} 
+\index{QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}!bCoefficientPart@{bCoefficientPart}}
+\index{bCoefficientPart@{bCoefficientPart}!QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}}
+\doxysubsubsection{\texorpdfstring{bCoefficientPart}{bCoefficientPart}}
+{\footnotesize\ttfamily double Quadratic\+Equation\+Solution\+Status\+::b\+Coefficient\+Part}
 
 \mbox{\Hypertarget{struct_quadratic_equation_solution_status_a7ae0ba088695a0270f5f1e68e4840200}\label{struct_quadratic_equation_solution_status_a7ae0ba088695a0270f5f1e68e4840200}} 
 \index{QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}!condition@{condition}}
@@ -28,11 +28,11 @@ int \mbox{\hyperlink{struct_quadratic_equation_solution_status_a7ae0ba088695a027
 \doxysubsubsection{\texorpdfstring{condition}{condition}}
 {\footnotesize\ttfamily int Quadratic\+Equation\+Solution\+Status\+::condition}
 
-\mbox{\Hypertarget{struct_quadratic_equation_solution_status_a7822b1699e81effd38073493baa0267d}\label{struct_quadratic_equation_solution_status_a7822b1699e81effd38073493baa0267d}} 
-\index{QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}!dPart@{dPart}}
-\index{dPart@{dPart}!QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}}
-\doxysubsubsection{\texorpdfstring{dPart}{dPart}}
-{\footnotesize\ttfamily double Quadratic\+Equation\+Solution\+Status\+::d\+Part}
+\mbox{\Hypertarget{struct_quadratic_equation_solution_status_a5f97f17910df23ec7e92a4adf3bc91a2}\label{struct_quadratic_equation_solution_status_a5f97f17910df23ec7e92a4adf3bc91a2}} 
+\index{QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}!discriminantPart@{discriminantPart}}
+\index{discriminantPart@{discriminantPart}!QuadraticEquationSolutionStatus@{QuadraticEquationSolutionStatus}}
+\doxysubsubsection{\texorpdfstring{discriminantPart}{discriminantPart}}
+{\footnotesize\ttfamily double Quadratic\+Equation\+Solution\+Status\+::discriminant\+Part}
 
 
 
