--- a/0.SqrEquation/doc/latex/_equation_8c.tex
+++ b/0.SqrEquation/doc/latex/_equation_8c.tex
@@ -14,11 +14,15 @@ struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Eq
 \item 
 void \mbox{\hyperlink{_equation_8c_a6a1eedd89ebad5e93563be37d2d4b0a0}{get\+Coefficients}} (double $\ast$a, double $\ast$b, double $\ast$c)
 \item 
-struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8c_ac9999f02736b2a5374a2e6876c6752a1}{Quad\+Equation\+Solution}} ()
+struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8c_a97cd6beb5d4ce054dc280a4544a5b01d}{quad\+Equation\+Solution}} ()
+\item 
+void \mbox{\hyperlink{_equation_8c_a79f22702ec8a00df74b083d81d0f128d}{file\+Test\+Output}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} test, double b\+Part, double d\+Part, FILE $\ast$output, enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, int test\+Number)
+\item 
+void \mbox{\hyperlink{_equation_8c_a032b6bb9f7c457e6da9bb33f9d0b117b}{console\+Test\+Output}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} test, double b\+Part, double d\+Part, enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, int test\+Number)
 \item 
 void \mbox{\hyperlink{_equation_8c_ad36c4b2c7080a1289f22f17233075394}{unit\+Test}} ()
 \item 
-void \mbox{\hyperlink{_equation_8c_ae9c69b25b9164d72300eb70db1423c4f}{command\+Line\+Interface}} ()
+void \mbox{\hyperlink{_equation_8c_a6eb4bce7cedba5fb7ed6f601eded4b97}{solve\+Quad\+Equation}} ()
 \end{DoxyCompactItemize}
 
 
@@ -29,17 +33,23 @@ void \mbox{\hyperlink{_equation_8c_ae9c69b25b9164d72300eb70db1423c4f}{command\+L
 \doxysubsubsection{\texorpdfstring{clearBuffer()}{clearBuffer()}}
 {\footnotesize\ttfamily void clear\+Buffer (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8c_ae9c69b25b9164d72300eb70db1423c4f}\label{_equation_8c_ae9c69b25b9164d72300eb70db1423c4f}} 
-\index{Equation.c@{Equation.c}!commandLineInterface@{commandLineInterface}}
-\index{commandLineInterface@{commandLineInterface}!Equation.c@{Equation.c}}
-\doxysubsubsection{\texorpdfstring{commandLineInterface()}{commandLineInterface()}}
-{\footnotesize\ttfamily void command\+Line\+Interface (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
 \mbox{\Hypertarget{_equation_8c_af132ca5d79c10c2611517a4d9ea32a6d}\label{_equation_8c_af132ca5d79c10c2611517a4d9ea32a6d}} 
 \index{Equation.c@{Equation.c}!compareDouble@{compareDouble}}
 \index{compareDouble@{compareDouble}!Equation.c@{Equation.c}}
 \doxysubsubsection{\texorpdfstring{compareDouble()}{compareDouble()}}
 {\footnotesize\ttfamily int compare\+Double (\begin{DoxyParamCaption}\item[{double}]{lhs,  }\item[{double}]{rhs }\end{DoxyParamCaption})}
+
+\mbox{\Hypertarget{_equation_8c_a032b6bb9f7c457e6da9bb33f9d0b117b}\label{_equation_8c_a032b6bb9f7c457e6da9bb33f9d0b117b}} 
+\index{Equation.c@{Equation.c}!consoleTestOutput@{consoleTestOutput}}
+\index{consoleTestOutput@{consoleTestOutput}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{consoleTestOutput()}{consoleTestOutput()}}
+{\footnotesize\ttfamily void console\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{test,  }\item[{double}]{b\+Part,  }\item[{double}]{d\+Part,  }\item[{enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
+
+\mbox{\Hypertarget{_equation_8c_a79f22702ec8a00df74b083d81d0f128d}\label{_equation_8c_a79f22702ec8a00df74b083d81d0f128d}} 
+\index{Equation.c@{Equation.c}!fileTestOutput@{fileTestOutput}}
+\index{fileTestOutput@{fileTestOutput}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{fileTestOutput()}{fileTestOutput()}}
+{\footnotesize\ttfamily void file\+Test\+Output (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{test,  }\item[{double}]{b\+Part,  }\item[{double}]{d\+Part,  }\item[{FILE $\ast$}]{output,  }\item[{enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}}}]{condition,  }\item[{int}]{test\+Number }\end{DoxyParamCaption})}
 
 \mbox{\Hypertarget{_equation_8c_a6a1eedd89ebad5e93563be37d2d4b0a0}\label{_equation_8c_a6a1eedd89ebad5e93563be37d2d4b0a0}} 
 \index{Equation.c@{Equation.c}!getCoefficients@{getCoefficients}}
@@ -47,11 +57,11 @@ void \mbox{\hyperlink{_equation_8c_ae9c69b25b9164d72300eb70db1423c4f}{command\+L
 \doxysubsubsection{\texorpdfstring{getCoefficients()}{getCoefficients()}}
 {\footnotesize\ttfamily void get\+Coefficients (\begin{DoxyParamCaption}\item[{double $\ast$}]{a,  }\item[{double $\ast$}]{b,  }\item[{double $\ast$}]{c }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8c_ac9999f02736b2a5374a2e6876c6752a1}\label{_equation_8c_ac9999f02736b2a5374a2e6876c6752a1}} 
-\index{Equation.c@{Equation.c}!QuadEquationSolution@{QuadEquationSolution}}
-\index{QuadEquationSolution@{QuadEquationSolution}!Equation.c@{Equation.c}}
-\doxysubsubsection{\texorpdfstring{QuadEquationSolution()}{QuadEquationSolution()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} Quad\+Equation\+Solution (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+\mbox{\Hypertarget{_equation_8c_a97cd6beb5d4ce054dc280a4544a5b01d}\label{_equation_8c_a97cd6beb5d4ce054dc280a4544a5b01d}} 
+\index{Equation.c@{Equation.c}!quadEquationSolution@{quadEquationSolution}}
+\index{quadEquationSolution@{quadEquationSolution}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{quadEquationSolution()}{quadEquationSolution()}}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} quad\+Equation\+Solution (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 \mbox{\Hypertarget{_equation_8c_ad5a404d4ebb1b96e7c9b5266239bd605}\label{_equation_8c_ad5a404d4ebb1b96e7c9b5266239bd605}} 
 \index{Equation.c@{Equation.c}!solveLinearCase@{solveLinearCase}}
@@ -64,6 +74,12 @@ void \mbox{\hyperlink{_equation_8c_ae9c69b25b9164d72300eb70db1423c4f}{command\+L
 \index{solveQuadCase@{solveQuadCase}!Equation.c@{Equation.c}}
 \doxysubsubsection{\texorpdfstring{solveQuadCase()}{solveQuadCase()}}
 {\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} solve\+Quad\+Case (\begin{DoxyParamCaption}\item[{double}]{a,  }\item[{double}]{b,  }\item[{double}]{c }\end{DoxyParamCaption})}
+
+\mbox{\Hypertarget{_equation_8c_a6eb4bce7cedba5fb7ed6f601eded4b97}\label{_equation_8c_a6eb4bce7cedba5fb7ed6f601eded4b97}} 
+\index{Equation.c@{Equation.c}!solveQuadEquation@{solveQuadEquation}}
+\index{solveQuadEquation@{solveQuadEquation}!Equation.c@{Equation.c}}
+\doxysubsubsection{\texorpdfstring{solveQuadEquation()}{solveQuadEquation()}}
+{\footnotesize\ttfamily void solve\+Quad\+Equation (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 \mbox{\Hypertarget{_equation_8c_ad36c4b2c7080a1289f22f17233075394}\label{_equation_8c_ad36c4b2c7080a1289f22f17233075394}} 
 \index{Equation.c@{Equation.c}!unitTest@{unitTest}}
