--- a/0.SqrEquation/doc/latex/examples.tex
+++ b/0.SqrEquation/doc/latex/examples.tex
@@ -5,6 +5,9 @@ Here is a list of all examples\+:\begin{DoxyCompactItemize}
 \mbox{\hyperlink{solve_quad_case-example}{solve\+Quad\+Case}}\item 
 \mbox{\hyperlink{clear_buffer-example}{clear\+Buffer}}\item 
 \mbox{\hyperlink{solve_linear_case-example}{solve\+Linear\+Case}}\item 
+\mbox{\hyperlink{get_coefficients-example}{get\+Coefficients}}\item 
 \mbox{\hyperlink{_quad_equation_solution-example}{Quad\+Equation\+Solution}}\item 
-\mbox{\hyperlink{unit_test-example}{unit\+Test}}\item 
-\mbox{\hyperlink{command_line_interface-example}{command\+Line\+Interface}}\end{DoxyCompactItemize}
+\mbox{\hyperlink{file_test_output-example}{file\+Test\+Output}}\item 
+\mbox{\hyperlink{console_test_output-example}{console\+Test\+Output}}\item 
+\mbox{\hyperlink{uni_test-example}{uni\+Test}}\item 
+\mbox{\hyperlink{solve_quad_equation-example}{solve\+Quad\+Equation}}\end{DoxyCompactItemize}
