--- a/0.SqrEquation/doc/latex/solve_linear_case-example.tex
+++ b/0.SqrEquation/doc/latex/solve_linear_case-example.tex
@@ -1,10 +1,7 @@
 \hypertarget{solve_linear_case-example}{}\doxysection{solve\+Linear\+Case}
-Функция решения линейного уравнения. \begin{DoxyAuthor}{Author}
-Ivan Pavlov 
-\end{DoxyAuthor}
-\begin{DoxyDate}{Date}
-26.\+08.\+2021 A function that records the solutions of equations and the state of the roots the \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} structure in the linear case. Returns a structure containing the solution and their states. (3.\+4, 4.\+1)
-\end{DoxyDate}
+A Linear case function. A function that records the solutions of equations and the state of the roots the \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} structure in the linear case. \begin{DoxyReturn}{Returns}
+struct with Linear Equation statement and value. (3.\+4, 4.\+1)
+\end{DoxyReturn}
 
 \begin{DoxyCodeInclude}{0}
 
