--- a/0.SqrEquation/doc/latex/examples.tex
+++ b/0.SqrEquation/doc/latex/examples.tex
@@ -10,4 +10,5 @@ Here is a list of all examples\+:\begin{DoxyCompactItemize}
 \mbox{\hyperlink{file_test_output-example}{file\+Test\+Output}}\item 
 \mbox{\hyperlink{console_test_output-example}{console\+Test\+Output}}\item 
 \mbox{\hyperlink{uni_test-example}{uni\+Test}}\item 
+\mbox{\hyperlink{print_roots-example}{print\+Roots}}\item 
 \mbox{\hyperlink{solve_quad_equation-example}{solve\+Quad\+Equation}}\end{DoxyCompactItemize}
