--- a/0.SqrEquation/doc/latex/main_8c.tex
+++ b/0.SqrEquation/doc/latex/main_8c.tex
@@ -1,5 +1,5 @@
-\hypertarget{main_8c}{}\doxysection{D\+:/\+Git/\+Summer\+School2021/0.Sqr\+Equation/main.c File Reference}
-\label{main_8c}\index{D:/Git/SummerSchool2021/0.SqrEquation/main.c@{D:/Git/SummerSchool2021/0.SqrEquation/main.c}}
+\hypertarget{main_8c}{}\doxysection{main.\+c File Reference}
+\label{main_8c}\index{main.c@{main.c}}
 {\ttfamily \#include \char`\"{}Equation.\+h\char`\"{}}\newline
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
