--- a/0.SqrEquation/doc/latex/refman.tex
+++ b/0.SqrEquation/doc/latex/refman.tex
@@ -194,6 +194,7 @@
 \input{file_test_output-example}
 \input{console_test_output-example}
 \input{uni_test-example}
+\input{print_roots-example}
 \input{solve_quad_equation-example}
 %--- End generated contents ---
 % Index
