--- a/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
+++ b/0.SqrEquation/doc/latex/struct_quadratic_equation_solution_status.tex
@@ -38,4 +38,4 @@ int \mbox{\hyperlink{struct_quadratic_equation_solution_status_a7ae0ba088695a027
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-D\+:/\+Git/\+Summer\+School2021/0.\+Sqr\+Equation/\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
+\mbox{\hyperlink{_equation_8h}{Equation.\+h}}\end{DoxyCompactItemize}
