--- a/0.SqrEquation/doc/latex/_equation_8h.tex
+++ b/0.SqrEquation/doc/latex/_equation_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{_equation_8h}{}\doxysection{D\+:/\+Git/\+Summer\+School2021/0.Sqr\+Equation/\+Equation.h File Reference}
-\label{_equation_8h}\index{D:/Git/SummerSchool2021/0.SqrEquation/Equation.h@{D:/Git/SummerSchool2021/0.SqrEquation/Equation.h}}
+\hypertarget{_equation_8h}{}\doxysection{Equation.\+h File Reference}
+\label{_equation_8h}\index{Equation.h@{Equation.h}}
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$math.\+h$>$}\newline
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
@@ -46,13 +46,13 @@ enum \mbox{\hyperlink{_equation_8h_a39be858521a08b1a95f41de84df34342}{DOUBLE\+\_
 \item 
 void \mbox{\hyperlink{_equation_8h_a6a1eedd89ebad5e93563be37d2d4b0a0}{get\+Coefficients}} (double $\ast$a, double $\ast$b, double $\ast$c)
 \item 
-struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8h_ad5a404d4ebb1b96e7c9b5266239bd605}{solve\+Linear\+Case}} (double a, double b)
+struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8h_a1d042185846095b5cefec9ef012880c5}{solve\+Linear\+Case}} (const double a, const double b)
 \item 
-struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8h_a5ca5f5d928acb499d5ec68e8ad80ec7b}{solve\+Quad\+Case}} (double a, double b, double c)
+struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8h_af6cce36e244274f3385da9def4812df2}{solve\+Quad\+Case}} (const double a, const double b, const double c)
 \item 
 struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} \mbox{\hyperlink{_equation_8h_a97cd6beb5d4ce054dc280a4544a5b01d}{quad\+Equation\+Solution}} ()
 \item 
-int \mbox{\hyperlink{_equation_8h_ac184d0d83be9ea23e1eba96c97524608}{compare\+Double}} (double one, double two)
+int \mbox{\hyperlink{_equation_8h_ab3444b22e3af571155f5444df4b4fda0}{compare\+Double}} (const double lhs, const double rhs)
 \item 
 void \mbox{\hyperlink{_equation_8h_ad36c4b2c7080a1289f22f17233075394}{unit\+Test}} ()
 \item 
@@ -62,7 +62,9 @@ void \mbox{\hyperlink{_equation_8h_a79f22702ec8a00df74b083d81d0f128d}{file\+Test
 \item 
 void \mbox{\hyperlink{_equation_8h_a032b6bb9f7c457e6da9bb33f9d0b117b}{console\+Test\+Output}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} test, double b\+Part, double d\+Part, enum \mbox{\hyperlink{_equation_8h_aeff6e1b0a8bacd5a8a58f17fd7360288}{QUADRATIC\+\_\+\+EQUATION\+\_\+\+SOLUTION\+\_\+\+CONDITION}} condition, int test\+Number)
 \item 
-void \mbox{\hyperlink{_equation_8h_a6eb4bce7cedba5fb7ed6f601eded4b97}{solve\+Quad\+Equation}} ()
+void \mbox{\hyperlink{_equation_8h_a8843773b33c7469c4860f18c0cb08b03}{solve\+Quad\+Equation\+CLI}} ()
+\item 
+void \mbox{\hyperlink{_equation_8h_a442216a51ee4c6aa31f4fc2a5550f856}{print\+Roots}} (struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} Equations)
 \end{DoxyCompactItemize}
 
 
@@ -175,11 +177,11 @@ NON\+\_\+\+EXISTENT&\\
 \doxysubsubsection{\texorpdfstring{clearBuffer()}{clearBuffer()}}
 {\footnotesize\ttfamily void clear\+Buffer (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8h_ac184d0d83be9ea23e1eba96c97524608}\label{_equation_8h_ac184d0d83be9ea23e1eba96c97524608}} 
+\mbox{\Hypertarget{_equation_8h_ab3444b22e3af571155f5444df4b4fda0}\label{_equation_8h_ab3444b22e3af571155f5444df4b4fda0}} 
 \index{Equation.h@{Equation.h}!compareDouble@{compareDouble}}
 \index{compareDouble@{compareDouble}!Equation.h@{Equation.h}}
 \doxysubsubsection{\texorpdfstring{compareDouble()}{compareDouble()}}
-{\footnotesize\ttfamily int compare\+Double (\begin{DoxyParamCaption}\item[{double}]{one,  }\item[{double}]{two }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int compare\+Double (\begin{DoxyParamCaption}\item[{const double}]{lhs,  }\item[{const double}]{rhs }\end{DoxyParamCaption})}
 
 \mbox{\Hypertarget{_equation_8h_a032b6bb9f7c457e6da9bb33f9d0b117b}\label{_equation_8h_a032b6bb9f7c457e6da9bb33f9d0b117b}} 
 \index{Equation.h@{Equation.h}!consoleTestOutput@{consoleTestOutput}}
@@ -199,29 +201,35 @@ NON\+\_\+\+EXISTENT&\\
 \doxysubsubsection{\texorpdfstring{getCoefficients()}{getCoefficients()}}
 {\footnotesize\ttfamily void get\+Coefficients (\begin{DoxyParamCaption}\item[{double $\ast$}]{a,  }\item[{double $\ast$}]{b,  }\item[{double $\ast$}]{c }\end{DoxyParamCaption})}
 
+\mbox{\Hypertarget{_equation_8h_a442216a51ee4c6aa31f4fc2a5550f856}\label{_equation_8h_a442216a51ee4c6aa31f4fc2a5550f856}} 
+\index{Equation.h@{Equation.h}!printRoots@{printRoots}}
+\index{printRoots@{printRoots}!Equation.h@{Equation.h}}
+\doxysubsubsection{\texorpdfstring{printRoots()}{printRoots()}}
+{\footnotesize\ttfamily void print\+Roots (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}}}]{Equations }\end{DoxyParamCaption})}
+
 \mbox{\Hypertarget{_equation_8h_a97cd6beb5d4ce054dc280a4544a5b01d}\label{_equation_8h_a97cd6beb5d4ce054dc280a4544a5b01d}} 
 \index{Equation.h@{Equation.h}!quadEquationSolution@{quadEquationSolution}}
 \index{quadEquationSolution@{quadEquationSolution}!Equation.h@{Equation.h}}
 \doxysubsubsection{\texorpdfstring{quadEquationSolution()}{quadEquationSolution()}}
 {\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} quad\+Equation\+Solution (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8h_ad5a404d4ebb1b96e7c9b5266239bd605}\label{_equation_8h_ad5a404d4ebb1b96e7c9b5266239bd605}} 
+\mbox{\Hypertarget{_equation_8h_a1d042185846095b5cefec9ef012880c5}\label{_equation_8h_a1d042185846095b5cefec9ef012880c5}} 
 \index{Equation.h@{Equation.h}!solveLinearCase@{solveLinearCase}}
 \index{solveLinearCase@{solveLinearCase}!Equation.h@{Equation.h}}
 \doxysubsubsection{\texorpdfstring{solveLinearCase()}{solveLinearCase()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} solve\+Linear\+Case (\begin{DoxyParamCaption}\item[{double}]{a,  }\item[{double}]{b }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} solve\+Linear\+Case (\begin{DoxyParamCaption}\item[{const double}]{a,  }\item[{const double}]{b }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8h_a5ca5f5d928acb499d5ec68e8ad80ec7b}\label{_equation_8h_a5ca5f5d928acb499d5ec68e8ad80ec7b}} 
+\mbox{\Hypertarget{_equation_8h_af6cce36e244274f3385da9def4812df2}\label{_equation_8h_af6cce36e244274f3385da9def4812df2}} 
 \index{Equation.h@{Equation.h}!solveQuadCase@{solveQuadCase}}
 \index{solveQuadCase@{solveQuadCase}!Equation.h@{Equation.h}}
 \doxysubsubsection{\texorpdfstring{solveQuadCase()}{solveQuadCase()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} solve\+Quad\+Case (\begin{DoxyParamCaption}\item[{double}]{a,  }\item[{double}]{b,  }\item[{double}]{c }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{struct_quadratic_equation_solution_status}{Quadratic\+Equation\+Solution\+Status}} solve\+Quad\+Case (\begin{DoxyParamCaption}\item[{const double}]{a,  }\item[{const double}]{b,  }\item[{const double}]{c }\end{DoxyParamCaption})}
 
-\mbox{\Hypertarget{_equation_8h_a6eb4bce7cedba5fb7ed6f601eded4b97}\label{_equation_8h_a6eb4bce7cedba5fb7ed6f601eded4b97}} 
-\index{Equation.h@{Equation.h}!solveQuadEquation@{solveQuadEquation}}
-\index{solveQuadEquation@{solveQuadEquation}!Equation.h@{Equation.h}}
-\doxysubsubsection{\texorpdfstring{solveQuadEquation()}{solveQuadEquation()}}
-{\footnotesize\ttfamily void solve\+Quad\+Equation (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+\mbox{\Hypertarget{_equation_8h_a8843773b33c7469c4860f18c0cb08b03}\label{_equation_8h_a8843773b33c7469c4860f18c0cb08b03}} 
+\index{Equation.h@{Equation.h}!solveQuadEquationCLI@{solveQuadEquationCLI}}
+\index{solveQuadEquationCLI@{solveQuadEquationCLI}!Equation.h@{Equation.h}}
+\doxysubsubsection{\texorpdfstring{solveQuadEquationCLI()}{solveQuadEquationCLI()}}
+{\footnotesize\ttfamily void solve\+Quad\+Equation\+CLI (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 \mbox{\Hypertarget{_equation_8h_ad36c4b2c7080a1289f22f17233075394}\label{_equation_8h_ad36c4b2c7080a1289f22f17233075394}} 
 \index{Equation.h@{Equation.h}!unitTest@{unitTest}}
